test/compiler/pass/_cond.ods
do x = if true then () -> return "hello" else () -> return "bye"