test/compiler/fail/_fdecl_unconst.ods
do f = (x) ->
    do y = 1 + 2
    return x
